2005-08-08 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvCmd.c: fixed traversing the list
	  of registered object types in Sv_DuplicateObj()
	  (thx to eric.melbardis@netkitsolutions.com)

2005-07-27 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.2 TAGGED FOR RELEASE (thread-2-6-2) ***

	* configure: regen
	* unix/README: added some clarifications about usage
	  of --with-gdbm switch
	* README: 
	* configure.in: bumped version to 2.6.2
	* aclocal.m4: fixed for alternate gdbm lib location 
	  as per patch request #1245204
	* generic/tclThread.c: removed Thread_Unload and
	  Thread_SafeUnload because we can't really be unloaded.
	* html/thread.html: regen
	* html/tpool.html: regen
	* html/tsv.html: regen
	* html/ttrace.html: regen
	* man/thread.n: regen
	* man/tpool.n: regen
	* man/tsv.n: regen
	* man/ttrace.n: regen

2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Remove SYSTEM_TCLSH and any
	code that tries to run tclsh at build time
	aside from running the test cases.
	* configure: Regen.
	* configure.in: Remove calls to TEA_BUILD_TCLSH
	and TEA_BUILD_WISH since these were removed
	from tcl.m4. This fixes up the build when
	--with-tcl indicates either a build dir or
	and install dir.

2005-07-25 Zoran Vasiljevic <zv@archiware.com>

	* pkgIndex.tcl.in: simplified by introducing a
	helper procedure, thus avoiding too much quoting.

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Subst TCLSH_PROG as SYSTEM_TCLSH
	and subst BUILD_TCLSH and BUILD_TCLSH_PROG.
	* configure: Regen.
	* configure.in: Invoke TEA_BUILD_TCLSH from
	tcl.m4 to correctly determine BUILD_TCLSH.

2005-04-12 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclThread.h:
	* generic/threadCmd.c: reverted some changes by the
	last checkin which slipped in by mistake

2005-04-09 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclThread.h: 
	* generic/threadCmd.c: added Thread_Unload and
	Thread_SafeUnload to be able to load into the